--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "joi": "^17.11.0",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.3",
