--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.6",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
@@ -36,6 +37,7 @@
     "@types/compression": "^1.7.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.3",
     "@types/nodemailer": "^6.4.11",
     "@types/swagger-jsdoc": "^6.0.1",
