--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
