chore: add API prefix to api config vars - update accordingly - update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,22 @@
-APP_NAME=<string>
-PORT=3000
-NODE_ENV=development|production
-DATABASE_URL=<string>
+#
+# API CONFIG
+#
+API_NAME=iGP AUth
+API_PORT=3000
+API_ENV=development
+
+#
+# DATABASE (mongodb)
+#
+DATABASE_URL=string
 
 #
 # LOGGER
 #
-LOG_LEVEL=debug|error|warn|verbose
+LOG_LEVEL=debug|warn|error|verbose
+
+#
+# JWT
+#
+JWT_SECRET=<string>
+JWT_EXPIRY=<number>
