--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "joi": "^17.11.0",
