--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^7.6.1",
     "nodemailer": "^6.9.6",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
