--- a/package.json
+++ b/package.json
@@ -16,7 +16,32 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "format:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
-    "copy-assets": "mkdir dist/public && cp src/public/* dist/public/"
+    "copy-assets": "rm -rf dist/public && mkdir dist/public && cp src/public/* dist/public/"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts?$": "ts-jest"
+    },
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/src/public/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    },
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -24,6 +49,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
@@ -49,6 +75,7 @@
     "@types/express": "^4.17.19",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.8.4",
     "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^2.0.14",
@@ -60,6 +87,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.0.1",
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
